# ShapeME

./: .README.md.swp  .gitignore  CMI_stochastic_opt_subset.py  CMI_stochastic_opt_subset_single_seed.py  LICENSE  README.md  cmi_filter.py  cmi_filter_optimized_motifs.py  commands.md  conda_environment.yaml  conda_spec_file.txt  convert_narrowpeak_to_fire.py  create_all_input_files.sh  create_input_files.sh  cvlogistic.py  dnashapeparams.py  find_motifs.py  inout.py  logistic_regression_model.R  motif_maker.py  optim_single_motif.py  parse_motif_matches.py  plot_optims.py  save_mi.py  search_for_motifs.py  shapemotifvis.py  test_find_motifs.sh  test_motif_maker.py  test_motif_maker.sh  welfords.py
docs/: find_motifs_docs.md
examples/binary_example/: fold_0_test.fa  fold_0_test.fa.EP  fold_0_test.fa.HelT  fold_0_test.fa.MGW  fold_0_test.fa.ProT  fold_0_test.fa.Roll  fold_0_test.txt  fold_0_train.fa  fold_0_train.fa.EP  fold_0_train.fa.HelT  fold_0_train.fa.MGW  fold_0_train.fa.ProT  fold_0_train.fa.Roll  fold_0_train.txt  fold_1_test.fa  fold_1_test.fa.EP  fold_1_test.fa.HelT  fold_1_test.fa.MGW  fold_1_test.fa.ProT  fold_1_test.fa.Roll  fold_1_test.txt  fold_1_train.fa  fold_1_train.fa.EP  fold_1_train.fa.HelT  fold_1_train.fa.MGW  fold_1_train.fa.ProT  fold_1_train.fa.Roll  fold_1_train.txt  fold_2_test.fa  fold_2_test.fa.EP  fold_2_test.fa.HelT  fold_2_test.fa.MGW  fold_2_test.fa.ProT  fold_2_test.fa.Roll  fold_2_test.txt  fold_2_train.fa  fold_2_train.fa.EP  fold_2_train.fa.HelT  fold_2_train.fa.MGW  fold_2_train.fa.ProT  (+44 more)
examples/categorical_example/: seqs.fa  seqs.txt  test_five_cat_categorical_test_0.fa  test_five_cat_categorical_test_0.fa.EP  test_five_cat_categorical_test_0.fa.HelT  test_five_cat_categorical_test_0.fa.MGW  test_five_cat_categorical_test_0.fa.ProT  test_five_cat_categorical_test_0.fa.Roll  test_five_cat_categorical_test_0.txt  test_five_cat_categorical_train_0.fa  test_five_cat_categorical_train_0.fa.EP  test_five_cat_categorical_train_0.fa.HelT  test_five_cat_categorical_train_0.fa.MGW  test_five_cat_categorical_train_0.fa.ProT  test_five_cat_categorical_train_0.fa.Roll  test_five_cat_categorical_train_0.txt
examples/continuous_example/: seqs.fa  seqs.txt  test_data_continuous_2000_test_0.fa  test_data_continuous_2000_test_0.fa.EP  test_data_continuous_2000_test_0.fa.HelT  test_data_continuous_2000_test_0.fa.MGW  test_data_continuous_2000_test_0.fa.ProT  test_data_continuous_2000_test_0.fa.Roll  test_data_continuous_2000_test_0.txt  test_data_continuous_2000_train_0.fa  test_data_continuous_2000_train_0.fa.EP  test_data_continuous_2000_train_0.fa.HelT  test_data_continuous_2000_train_0.fa.MGW  test_data_continuous_2000_train_0.fa.ProT  test_data_continuous_2000_train_0.fa.Roll  test_data_continuous_2000_train_0.txt
motifer/: Cargo.toml
motifer/src/: cli.yaml  lib.rs  main.rs  optimize.rs
optim/: Cargo.toml
python3/: _expected_mutual_info_fast.c  convert_narrowpeak_to_fire.py  copy_inout.py  create_synthetic_data.py  dnashapeparams.py  evaluate_motifs.py  fimopytools.py  find_motifs.py  identify_problems.py  inout.py  motif_maker.py  parse_motif_matches.py  run_fimo.py  run_streme.py  sample_cmi_values.py  search_for_motifs.py  set_up_test_data.py  setup.py  shapemotifvis.py  test_distance_calc.py
python3/utils/: calc_shape.R  convert_motif_to_tidy.py  fasta.py  logistic_regression_model.R  peak.py
rust/: Cargo.toml
rust_utils/: Cargo.toml
rust_utils/evaluate_motifs/: Cargo.toml
rust_utils/find_motifs/: Cargo.toml
rust_utils/find_motifs/src/: main.rs
rust_utils/fitting/: Cargo.toml
rust_utils/get_robustness/: Cargo.toml
rust_utils/motifer/: Cargo.toml
rust_utils/motifer/src/: lib.rs
rust_utils/optim/: Cargo.toml
rust_utils/partial_application/: README.md
rust_utils/sample_cmi/: Cargo.toml
rust_utils/sample_cmi/src/: main.rs
rust_utils/search_for_motifs/: Cargo.toml
singularity/: CHANGELOG.md  conda_environment.yaml  env_spec.yaml  report.html  scheme_0.0.1.def  shapeme.bashrc  shapeme.def  shapeme.def.bak
src/: plot_wrapper.sh
src/app/: Cargo.toml
src/flask/: app.py
src/python3/: .ShapeME.py.swp  .find_motifs.py.swp  .inout.py.swp  (+26 more)
src/rust_utils/ShapeME/: Cargo.toml  Rocket.toml  err  evaluated_motifs.json  test_motif_result.json
src/rust_utils/ShapeME/db/: create.sql  create_encrypted.sql  shapeme.sqlite
src/rust_utils/ShapeME/src/: db.rs  job.rs  mail.rs  main.rs  results.rs  run.rs
src/rust_utils/ShapeME/src/multiform/: main.rs
src/rust_utils/ShapeME/templates/: account_exists.html.tera  create_account.html.tera  dashboard.html.tera  done.html.tera  finished.html.tera  index.html.tera  job_error.html.tera  job_finished.html.tera  job_no_motif.html.tera  job_not_found.html.tera  job_queued.html.tera  job_running.html.tera  macros.html.tera  no_auth.html.tera  no_such_user.html.tera  submit.html.tera  success.html.tera  unfinished.html.tera
src/rust_utils/filter_motifs/: Cargo.toml
src/rust_utils/filter_motifs/src/: main.rs
src/rust_utils/get_robustness/: Cargo.toml
src/rust_utils/get_robustness/src/: main.rs
src/rust_utils/infer_motifs/: Cargo.toml
src/rust_utils/infer_motifs/src/: main.rs
src/rust_utils/merge_folds/: Cargo.toml
src/rust_utils/merge_folds/src/: main.rs
test_data/: config.json  config.pkl  config_init_thresh.json  distances.npy  first_window.npy  hits.npy  lighthouse_out.pkl  subset_five_records.npy  test_args.pkl  test_logit_reg_res.pkl  test_motifs.json  test_motifs.pkl  test_output.pkl  transpose_target.npy  y_vals.npy
tests/: 20210712_testrun.err  20210713_subsetrun.err  20210714_subsetrun.err  20210729_shapes_optim.err  20210729_weights_shapes_optim.err  20210729_weights_shapes_threshold_optim.err  CMI_stochastic_opt_subset.py  brent_stochastic_opt_subset.py  check_optim_results.ipynb  fwd_rev_optimize.py  make_test_set.py  optimize_grid.py  rec_subset.pkl  running_through_code.ipynb  save_binary_mi.py  save_mi.py  stochastic_opt_subset.py  test_CMI.ipynb  test_code.py  test_input.txt  test_mgw.fa  test_on_subset.py  test_subset_optim.pkl
utils/: peak.py
(+531 files in other folders)
