cargo-features = ["test-dummy-unstable"]

[package]
name = "optim"
version = "0.1.0"
authors = ["jwschroeder3 <schroedj@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { version = "0.4.7", features = ["ctrlc", "ndarrayl", "nalgebral"] }
