[package]
name = "find_motifs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partial_application = { path = "../partial_application" }
motifer = { path = "../motifer" }
optim = { path = "../optim" }
rayon = "1.5.1"
