[package]
name = "sample_cmi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motifer = { path = "../motifer" }
rayon = "1.5.1"
approx = "0.5.0"
ndarray-npy = { path = "../ndarray-npy" }
fitting = { path = "../fitting" }
serde-pickle = "1.0"
