[package]
name = "ShapeME"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = "=0.5.0-rc.3"
rocket-multipart-form-data = "0.10.5"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features=["tera"]

