[package]
name = "filter_motifs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
ndarray = "0.15.3"
info_theory = { git = "https://github.com/jwschroeder3/info_theory.git", branch="main" }

