[package]
name = "infer_motifs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motifer = { path = "../motifer" }
optim = { path = "../optim" }
rayon = "1.5.1"
approx = "0.5.0"
ndarray-npy = "0.8.1"

